Resolves: tdf#121432 don't insert an extra page when parent is tabcontrol

but the new child is a toplevel widget

Change-Id: Ib794e076e2626485b9d9231daf914db6dd9b5e2f
Reviewed-on: https://gerrit.libreoffice.org/63431
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>